When in options mode, lock the menu to be visible and fixed to the viewport. Makes it easier to finish with edits.

--- a/statusboard/core/static/statusboard.css
+++ b/statusboard/core/static/statusboard.css
@@ -28,6 +28,14 @@ hr.divider {
   display: block;
 }
 
+body.optionsMode #menu {
+  position: fixed;
+}
+
+body.optionsMode #menu #menu-inner {
+  display: block;
+}
+
 #menu img {
   border: 0;
 }
